# bebchess

./: Cargo.toml  README.md
.github/workflows/: bebchess.yml
src/: birch.rs  lib.rs  main.rs  player.rs  uci.rs
src/birch/: birch_game.rs  mod.rs  player.rs  players.rs
