[package]
name = "bebchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vampirc-uci = { version = "0.11.1", features = ["chess"] }
futures = "0.3.30"
async-std = "1.12.0"
chess = "3.2.0"
interactive_process = "0.1.3"
